# ParaNet

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DRAG_TEST_REPORT.md  LICENSE  README.md  paranet-architecture-cn.drawio  polymorphic-dsl-architecture.drawio  polymorphic-dsl-syntax-structure.drawio  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements.txt  test-drag.html
backend/: .dockerignore  Dockerfile  README.md  README_API.md  config.py  docker-compose.yml  requirements.txt
backend/app/: __init__.py  main.py
backend/editor-backend-dev/: pom.xml
backend/editor-backend-dev.bak/: .gitlab-ci.yml  Dockerfile  README.md
compiler/: README.md  __init__.py  __main__.py  pipeline.py
compiler/backend/: __init__.py  base.py  bmv2_emitter.py  emit_context.py  factory.py  onos_emitter.py  p4_codegen.py  p4_emitter.py  stub_emitter.py  tofino_emitter.py
compiler/cli/: __init__.py  main.py
compiler/frontend/: __init__.py  grammar_intent.lark  grammar_pne.lark  grammar_pne_intent.lark  grammar_polymorphic.lark  intent_ast.py  intent_parser.py  pne_ast.py  pne_parser.py  poly_ast.py  poly_parser.py  preprocessor.py
compiler/ir/: __init__.py  capabilities.py  common.py  fragment_ir.py  instructions_ir.py  intent_ir.py  node_plan_ir.py  poly_control_ir.py  poly_data_ir.py  poly_topology_ir.py  program_ir.py  resources.py
compiler/lowering/: __init__.py  fragment_builder.py
compiler/placement/: __init__.py  node_target.py  planner.py
compiler/runtime/: __init__.py  manifest.py
compiler/semantic/: __init__.py  collector_intent.py  collector_intent_ir.py  collector_pne.py  collector_pne_intent.py  poly_control_collector.py  poly_data_collector.py  poly_topology_collector.py  protocol_adapters.py  symbols.py  topology_validate.py  validator.py
docs/: 2026-Q1-work-summary.md  compiler-backend-targets.md  dsl-reference.md  index.md  intent-unified-model.md  network-agent-design.md  paranet-thinking.md  topology-snapshot-schema.md
frontend/: .gitignore  ARCHITECTURE.md  FRONTEND_INTEGRATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
paranet/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_agent_controller.py  test_agent_prompt_skills.py  test_api_agent_integration.py  test_backend_emitter.py  test_compile_pipeline_mvp.py  test_compiler.py  test_events.py  test_llm.py  test_lynette2_frontend.py  test_models.py  test_paranet_agent.py  test_pne_intent_overlay.py  test_poly_ast.py  test_poly_control.py  test_poly_data.py  test_poly_parser.py  test_poly_topology.py  test_runtime.py  test_tools_db.py  test_tools_dsl.py  test_tools_topology.py  test_zhipu_llm_service.py
(+695 files in other folders)
